Resolves: tdf#83977 Push/Pop before/after messing with the cursor

otherwise we lose our selection with multi-page tables

Change-Id: I4f52d3cfb7a6d3c2cc1dbb68bbd5ce5c0005b1c3
(cherry picked from commit 4c4a9767f7fb0c7891f1dd96cbe38a9c35e46083)
Reviewed-on: https://gerrit.libreoffice.org/15143
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>